automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,13 @@
-<h1>Make your form here</h1>
+<!DOCTYPE HTML>
+<html>
+  <head><title></title></head>
+  <body>
+<h1>Welcome to the Nested Forms Lab!</h1>
+<form method="post" action="/show">
+  <input type="text" name="pirate[name]">
+  <input type="text" name="pirate[weight]">
+  <input type="text" name="pirate[height]">
+  <input type="submit" name="submit" value="submit">
+</form>
+</body>
+</html>
