--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -8,7 +8,7 @@
   <input type="text" name="pirate[weight]">
   <input type="text" name="pirate[height]">
   <input type="text" name="pirates[ships][][name]">
-  <input type="text" name="pirates[ships][][name]">
+  <input type="text" name="pirates[ships][][type]">
   <input type="submit" name="submit" value="submit">
 </form>
 </body>
