automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -7,9 +7,9 @@
   Pirate name: <input type="text" name="pirate[name]"><br/>
   Pirate Weight: <input type="text" name="pirate[weight]"><br/>
   Pirate Height: <input type="text" name="pirate[height]"><br/>
-  Ship Name: <input type="text" name="pirates[ships][][name]"><br/>
-  Ship Type: <input type="text" name="pirates[ships][][type]"><br/>
-  Ship Booty: <input type="text" name="pirates[ships][][booty]"><br/>
+  Ship Name: <input type="text" name="pirate[ships][][name]"><br/>
+  Ship Type: <input type="text" name="pirate[ships][][type]"><br/>
+  Ship Booty: <input type="text" name="pirate[ships][][booty]"><br/>
   <input type="submit" name="submit" value="submit">
 </form>
 </body>
