--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -3,7 +3,7 @@
   <head><title></title></head>
   <body>
 <h1>Welcome to the Nested Forms Lab!</h1>
-<form method="post" action="/show">
+<form method="post" action="/pirates">
   Pirate name: <input type="text" name="pirate[name]"><br/>
   Pirate Weight: <input type="text" name="pirate[weight]"><br/>
   Pirate Height: <input type="text" name="pirate[height]"><br/>
