--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,10 @@
 <h1>Display your Pirate here</h1>
 <%= @pirate.name %>
+<%= @pirate.height %>
+<%= @pirate.weight %>
 
 <h2>Display your first ship here</h2>
+<% @ship.each
 
 
 <h2>Display your second ship here</h2>
