--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -4,7 +4,8 @@
 <%= @pirate.weight %>
 
 <h2>Display your first ship here</h2>
-<% @ship.each
+<%= @ships.each do |ship %>
+<%=
 
 
 <h2>Display your second ship here</h2>
