--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -4,8 +4,13 @@
 <%= @pirate.weight %>
 
 <h2>Display your first ship here</h2>
-<%= @ships.each do |ship %>
-<%=
+<%= @ships.each do |ship| %>
+  <p>
+  Ship Name: <%= ship.name %>
+  Ship Type: <%= ship.type %>
+  Ship Booty: <%= ship.booty %>
+  </p>
+<%= end %>
 
 
 <h2>Display your second ship here</h2>
