--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -6,7 +6,7 @@
 <h2>Display your first ship here</h2>
 <%= @ships.each do |ship| %>
   <p>
-  Ship Name: <%= ship.name %>
+  <%= ship.name %>
   </p>
 <%= end %>
 
