automatically backed up by learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -6,7 +6,9 @@
 <h2>Display your first ship here</h2>
 <%= @ships.each do |ship| %>
   <p>
-  <%= ship.name %>
+  Ship Name: <%= ship.name %>
+  Ship Type: <%= ship.type %>
+  Ship Booty: <%= ship.booty %>
   </p>
 <%= end %>
 
