automatically backed up by learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -5,11 +5,7 @@
 
 <h2>Display your first ship here</h2>
 <%= @ships.each do |ship| %>
-  <p>
-  Ship Name: <%= ship.name %>
-  Ship Type: <%= ship.type %>
-  Ship Booty: <%= ship.booty %>
-  </p>
+<%= ship.name %>
 <%= end %>
 
 
