--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,7 @@
 <h1>Display your Pirate here</h1>
-<%= @pirate.name %>
-<%= @pirate.height %>
-<%= @pirate.weight %>
+Pirate name: <%= @pirate.name %>
+Pirate height: <%= @pirate.height %>
+Pirate weight: <%= @pirate.weight %>
 
 <h2>Display your first ship here</h2>
 <%= @ships.each do |ship| %>
