automatically backed up by learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -5,8 +5,8 @@ Pirate weight: <%= @pirate.weight %>
 
 <h2>Display your first ship here</h2>
 <%= @ships.each do |ship| %>
-<%= ship.name %>
-<%= end %>
+<% ship.name %>
+<% end %>
 
 
 <h2>Display your second ship here</h2>
