automatically backed up by learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -4,7 +4,7 @@ Pirate height: <%= @pirate.height %>
 Pirate weight: <%= @pirate.weight %>
 
 <h2>Display your first ship here</h2>
-<%= @ships.each do |ship| %>
+<% @ships.each do |ship| %>
 <% ship.name %>
 <% end %>
 
