automatically backed up by learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -5,7 +5,7 @@ Pirate weight: <%= @pirate.weight %>
 
 <h2>Display your first ship here</h2>
 <% @ships.each do |ship| %>
-<% ship.name %>
+<%= ship.name %>
 <% end %>
 
 
