--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -7,10 +7,11 @@
   Pirate name: <input type="text" name="pirate[name]"><br/>
   Pirate Weight: <input type="text" name="pirate[weight]"><br/>
   Pirate Height: <input type="text" name="pirate[height]"><br/>
-  
+  <% 2.times do %>
   Ship Name: <input type="text" name="pirate[ships][][name]"><br/>
   Ship Type: <input type="text" name="pirate[ships][][type]"><br/>
   Ship Booty: <input type="text" name="pirate[ships][][booty]"><br/>
+  <% end %>
   <input type="submit" name="submit" value="submit">
 </form>
 </body>
