automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -8,7 +8,7 @@
   Pirate Weight: <input type="text" name="pirate[weight]"><br/>
   Pirate Height: <input type="text" name="pirate[height]"><br/>
   <% 2.times do %>
-  Ship Name: <input type="text" name="pirate[ships][][name]"><br/>
+  ship_name_: <input type="text" name="pirate[ships][][name]"><br/>
   Ship Type: <input type="text" name="pirate[ships][][type]"><br/>
   Ship Booty: <input type="text" name="pirate[ships][][booty]"><br/>
   <% end %>
