--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -7,8 +7,8 @@
   Pirate name: <input type="text" name="pirate[name]"><br/>
   Pirate Weight: <input type="text" name="pirate[weight]"><br/>
   Pirate Height: <input type="text" name="pirate[height]"><br/>
-  <% 2.times do %>
-  ship_name_: <input type="text" name="pirate[ships][][name]"><br/>
+  <% 2.times do |i| %>
+  ship_name_<% i %>: <input type="text" name="pirate[ships][][name]"><br/>
   Ship Type: <input type="text" name="pirate[ships][][type]"><br/>
   Ship Booty: <input type="text" name="pirate[ships][][booty]"><br/>
   <% end %>
