--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -12,7 +12,7 @@
   Ship Type: <input type="text" name="pirate[ships][][type]" id="ship_type_<%=i+1%>"><br/>
   Ship Booty: <input type="text" name="pirate[ships][][booty]" id="ship_booty_<%=i+1%>"><br/>
   <% end %>
-  <input type="submit" name="submit" value="submit">
+  <input type="submit" name="Submit" value="submit">
 </form>
 </body>
 </html>
