--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,14 @@
 <h1>Display your Pirate here</h1>
+Pirate name: <%= @pirate.name %><br/>
+Pirate height: <%= @pirate.height %><br />
+Pirate weight: <%= @pirate.weight %><br />
 
-
-<h2>Display your first ship here</h2>
+<h2>Display your first ship here</h2><br />
+<% @ships.each do |ship| %>
+Ship Name: <%= ship.name %><br/>
+Ship Type: <%= ship.type %><br/>
+Ship Booty: <%= ship.booty %><br/>
+<% end %>
 
 
 <h2>Display your second ship here</h2>
